Fixing all linting issues